@startuml

title __ACTION Class Diagram__\n


        namespace action {
          interface model.action.Action {
              {abstract} + doAction()
              {abstract} + isValid()
          }
        }

  


        namespace action {
          enum ActionOutcome {
            DONE
            DONE_CAN_BE_DONE_AGAIN
            NOT_DONE
            WINNING_MOVE

          }
        }

  


        namespace action {
          class model.action.ApolloSwapAction {
              + ApolloSwapAction()
              + doAction()
              + isValid()
          }
        }

  


        namespace action {
          class model.action.BuildAction {
              + BuildAction()
              + doAction()
              + isValid()
          }
        }

  


        namespace action {
          class model.action.BuildDomeAction {
              + BuildDomeAction()
              + doAction()
          }
        }

  


        namespace action {
          class model.action.MinotaurPushAction {
              + MinotaurPushAction()
              + doAction()
              + getBackwardInfo()
              + isValid()
          }
        }

  


        namespace action {
          class model.action.MoveAction {
              + MoveAction()
              + doAction()
              + isValid()
              + winningMove()
              ~ checkGodsPowerActive()
          }
        }

  


        namespace action {
          class model.action.PlaceWorkerAction {
              + PlaceWorkerAction()
              + doAction()
              + isValid()
          }
        }

  


        namespace action {
          class model.action.SelectWorkerAction {
              + SelectWorkerAction()
              + doAction()
              + isValid()
          }
        }

  


        namespace action {
          class model.action.ZeusBuildAction {
              + ZeusBuildAction()
              + isValid()
          }
        }

  

model.action.ApolloSwapAction -up-|> model.action.MoveAction
model.action.BuildAction .up.|> model.action.Action
model.action.BuildDomeAction -up-|> model.action.BuildAction
model.action.MinotaurPushAction -up-|> model.action.MoveAction
model.action.MoveAction .up.|> model.action.Action
model.action.PlaceWorkerAction .up.|> model.action.Action
model.action.SelectWorkerAction .up.|> model.action.Action
model.action.ZeusBuildAction -up-|> model.action.BuildAction


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
